tests/fixtures/valid/no_xml_declaration.gpx
<gpx xmlns="http://www.topografix.com/GPX/1/1" version="1.1" creator="Test">
  <wpt lat="52.5200" lon="13.4050">
    <name>No XML declaration</name>
  </wpt>
</gpx>
