tests/fixtures/invalid/non_numeric_elevation.gpx
<?xml version="1.0" encoding="UTF-8"?>
<gpx xmlns="http://www.topografix.com/GPX/1/1" version="1.1" creator="Test">
  <wpt lat="52.5200" lon="13.4050">
    <ele>not_a_number</ele>
    <name>Non-numeric elevation</name>
  </wpt>
</gpx>
